# advent_of_code

./: CMakeLists.txt  LICENSE  Makefile  conanfile.txt
.conan/: linux_profile
cmake/: conan.cmake  gcc_version.cmake
src/: main.cpp  utils.cpp  utils.hpp
src/2015/: day_1_not_quite_lisp.cpp  day_1_not_quite_lisp.hpp  day_2_I_was_told_there_would_be_no_math.cpp  day_2_I_was_told_there_would_be_no_math.hpp
src/2022/: day_1_calorie_counting.cpp  day_1_calorie_counting.hpp  day_2_rock_paper_scissors.cpp  day_2_rock_paper_scissors.hpp  day_3_rucksack_reorganization.cpp  day_3_rucksack_reorganization.hpp  day_4_camp_cleanup.cpp  day_4_camp_cleanup.hpp
